# Gravity-Bridge

./: .gitignore  GAME_OF_NFTS.md  nft-todos.md  readme.md
.github/workflows/: go.yml  integration-tests.yml
docs/design/: ethereum-signing.md  messages.md  mint-lock.md  oracle.md  overview.md  parameters.md
docs/developer/: code-structure.md  environment-setup.md
e2e/.oraid/config/: config.toml
e2e/data/validator1/config/: config.toml
gravitygaze-2/: README.md  genesis.json
gravitygaze-3/: genesis.json
gravityjs/: LICENSE  README.md  package.json
gravityjs/proto/gravity/v1/: types.proto
gravityjs/scripts/: codegen.js
module/: .gitignore  .golangci.yml  Makefile  README.md  go.mod  go.sum  sample.sh
module/app/: app.go  assert.go  export.go  sim_test.go  state.go  utils.go
module/app/ante/: ante.go  min_commission.go
module/app/upgrades/: register.go
module/app/upgrades/antares/: handler.go
module/app/upgrades/monitorevent/: README.md  constants.go  handler.go
module/app/upgrades/orion/: README.md  handler.go
module/app/upgrades/pleiades/: handler.go
module/app/upgrades/polaris/: handler.go
module/app/upgrades/singlestep/: handler.go
module/app/upgrades/tron/: handler.go
module/app/upgrades/v2/: handler.go
module/cmd/gravity/: main.go
module/cmd/gravity/cmd/: genaccounts.go  genaccounts_test.go  gentx.go  migrate.go  root.go  testnet.go
module/contrib/local/: protocgen-js.sh  protocgen-swagger.sh  protocgen.sh
module/docs/proto/: proto-docs.md
module/proto/: buf.yaml
module/proto/gravity/v1/: attestation.proto  genesis.proto  msgs.proto  query.proto  types.proto
module/scripts/: multi_local_node.sh  sample_cli.sh  single_local_node.sh
module/scripts/e2e/: upgrade.sh
module/x/bech32ibc/: handler.go  module.go
module/x/bech32ibc/keeper/: gov.go  keeper.go
module/x/bech32ibc/types/: genesis.pb.go  gov.pb.go  (+3 more)
module/x/gravity/: abci.go  abci_test.go  cosmos-originated_test.go  handler.go  handler_test.go  ibc_middleware.go  module.go
module/x/internft/: keeper.go
orchestrator/: Cargo.toml  readme.md
orchestrator/cosmos_gravity/: Cargo.toml
orchestrator/cosmos_gravity/src/: proposals.rs  query.rs  send.rs  utils.rs
orchestrator/ethereum_gravity/: Cargo.toml
orchestrator/ethereum_gravity/src/: deploy_erc20.rs  logic_call.rs  message_signatures.rs  send_erc721_to_cosmos.rs  send_to_cosmos.rs  submit_batch.rs  utils.rs  valset_update.rs
orchestrator/gbt/: Cargo.toml
orchestrator/gbt/src/: args.rs  main.rs  orchestrator.rs  relayer.rs
orchestrator/gbt/src/client/: cosmos_to_eth.rs  deploy_erc20_representation.rs  erc20_to_cosmos.rs  erc721_to_cosmos.rs  eth_to_cosmos.rs  mod.rs  spot_relay.rs
orchestrator/gbt/src/keys/: mod.rs
orchestrator/gravity_proto/: Cargo.toml
orchestrator/gravity_proto/src/: ethereum_claim.rs  lib.rs
orchestrator/gravity_proto/src/prost/: cosmos.nft.v1beta1.rs  gaia.globalfee.v1beta1.rs  gaia.icaauth.v1.rs  gravity.v1.rs
orchestrator/gravity_utils/: Cargo.toml
orchestrator/gravity_utils/src/: error.rs  num_conversion.rs  prices.rs
orchestrator/gravity_utils/src/types/: batches.rs  config.rs  cross_bridge_balances.rs  ethereum_events.rs  event_signatures.rs  logic_call.rs  signatures.rs  valsets.rs
orchestrator/metrics_exporter/: Cargo.toml
orchestrator/orchestrator/: Cargo.toml
orchestrator/orchestrator/src/: ethereum_event_watcher.rs  main_loop.rs  oracle_resync.rs
orchestrator/proto_build/src/: main.rs
orchestrator/relayer/: Cargo.toml
orchestrator/relayer/examples/: get_event_nonce.rs
orchestrator/relayer/src/: batch_relaying.rs  find_latest_valset.rs  lib.rs  logic_call_relaying.rs  main_loop.rs  request_batches.rs  tests.rs  utils.rs  valset_relaying.rs
orchestrator/test_runner/: Cargo.toml
orchestrator/test_runner/src/: batch_stress.rs  batch_timeout.rs  bootstrapping.rs  cross_bridge_balances.rs  deposit_overflow.rs  erc_721_happy_path.rs  ethereum_keys.rs  happy_path.rs  happy_path_v2.rs  ibc_auto_forward.rs  ibc_metadata.rs  ica_host.rs  invalid_events.rs  main.rs  orch_only.rs  pause_bridge.rs  relay_market.rs  send_to_eth_fees.rs  signature_slashing.rs  slashing_delegation.rs  transaction_stress_test.rs  tx_cancel.rs  unhalt_bridge.rs  upgrade.rs  utils.rs  valset_rewards.rs  valset_stress.rs
scripts/: .gitignore  build_all_for_serve.sh  kill.sh  rly-config.yaml  serve.sh  serve_env.sh
solidity/: .env.example  contract-deployer.ts  hardhat-first-fork.config.ts  hardhat-second-fork.config.ts  hardhat.config.ts  package.json
solidity/contracts/: CosmosToken.sol  DummyToken.sol  Gravity.sol  GravityERC721.sol  HashingTest.sol  IGravity.sol  ReentrantERC20.sol  SigningTest.sol  SimpleLogicBatch.sol  TestERC20A.sol  TestERC20B.sol  TestERC20C.sol  TestERC20Custom.sol  TestERC721A.sol  TestFakeGravity.sol  TestLogicContract.sol  TestTokenBatchMiddleware.sol  VulnerableERC20.sol
solidity/scripts/: contract-deployer.sh
solidity/test/: arbitrary-logic.ts  deployERC20.ts  gas-test.ts  happy-path.ts  hashingTest.ts  sendERC721ToCosmos.ts  sendToCosmos.ts  submitBatch-vs-logicCall.ts  submitBatch.ts  submitERC721LogicCall.ts  universal-swap.ts  updateValset.ts
solidity/test-utils/: deployERC721.ts  index.ts  pure.ts
tests/assets/: ibc-relayer-config.toml
tests/container-scripts/: reload-code.sh  setup-validators.sh
(+84 files in other folders)
