[workspace]
members = [
    "orchestrator",
    "cosmos_gravity",
    "ethereum_gravity",
    "gravity_utils",
    "test_runner",
    "relayer",
    "gravity_proto",
    "gbt",
    "metrics_exporter",
]
default-members = ["gbt"]
resolver = "2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'

[workspace.dependencies]
num256 = "0.5"
clarity = "1.2.3"
prost = "0.12"
prost-types = "0.12"
tonic = "0.10"
tokio = "1.21"
cosmos-sdk-proto = { package = "cosmos-sdk-proto-althea", version = "0.16.0", features = [
    "ethermint",
    "bech32ibc",
] }
web30 = { git = "https://github.com/oraichain/web30.git", rev = "0a98bb0" }
deep_space = { git = "https://github.com/oraichain/deep_space.git", rev = "311d302" }
prometheus_exporter = { git = "https://github.com/jkilpatr/prometheus_exporter", rev = "c6a720a" }

gravity_utils = { path = "./gravity_utils" }
cosmos_gravity = { path = "./cosmos_gravity" }
ethereum_gravity = { path = "./ethereum_gravity" }
gravity_proto = { path = "./gravity_proto" }
relayer = { path = "./relayer" }
orchestrator = { path = "./orchestrator" }
metrics_exporter = { path = "./metrics_exporter" }
