[package]
name = "relayer"
version = "0.4.3"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

[lib]
name = "relayer"
path = "src/lib.rs"

[dependencies]
ethereum_gravity = { workspace = true }
cosmos_gravity = { workspace = true }
gravity_utils = { workspace = true }
gravity_proto = { workspace = true }

deep_space = { workspace = true }
serde_derive = "1.0"
clarity = { workspace = true }
docopt = "1"
serde = "1.0"
actix-rt = "2"
lazy_static = "1"
web30 = { workspace = true }
log = "0.4"
tokio = { workspace = true }
tonic = { workspace = true }
openssl-probe = "0.1"
futures = "0.3"
serde_json = "1.0"

[dev-dependencies]
actix = "0.13"
env_logger = "0.10"